# my_template_repo

./: .gitignore  .mcp.json  CLAUDE.md  README.md  UV_SETUP.md  pyproject.toml
.claude/: .mcp.json  agents.json  marketplace.json  settings.json  statusline.sh
.claude/agents/: backend-dev.md  code-reviewer.md  codex-reviewer.md  data-analyst.md  experiment-engineer.md  frontend-dev.md  notebook-developer.md  qa-tester.md  team-lead.md  tech-innovation-advisor.md
.claude/commands/: cleanup.md  codex-review.md  commit.md  docs.md  explain.md  fix.md  init.md  kaggle-update.md  pr.md  review.md  test.md  turn-main.md
.claude/hooks/: format.sh  notify.sh  pr-review-nudge.sh  pre-commit
.claude/scripts/: codex-run.sh
.claude/skills/colab/: SKILL.md  colab-mcp.md  colab-operator.md
.claude/skills/development/: SKILL.md  programming-languages.md
.claude/skills/kaggle/: SKILL.md  claude-friendly-outputs.md  colab-workflow.md  data-analysis-workflow.md  evaluation-metrics.md  experiment-tracking.md  kaggle-api-setup.md  kaggle-competition.md  kaggle-scraping.md  kaggle-workflow.md  model-zoo.md  notebook-development-guide.md  solution-strategy.md
.claude/skills/review-pr-comments/: SKILL.md
.claude/skills/sync-template/: SKILL.md
.claude/skills/teams/: SKILL.md  agent-definition-guide.md  team-patterns.md
.claude/skills/templates/: SKILL.md  custom-tools.md  project-domain.md  team-conventions.md  technology-stack.md
SKILLS/: README.md
SKILLS/core/: architecture-patterns.md  development-tools.md
SKILLS/kaggle/: README.md  claude-friendly-outputs.md  colab-workflow.md  competition-insights.md  competition-strategy.md  data-analysis-workflow.md  data-analysis.md  data-understanding.md  feature-engineering.md  kaggle-api-setup.md  ml-modeling.md
SKILLS/templates/: project-domain.md  team-conventions.md  technology-stack.md
docs/: kaggle-user-guide.md
docs/superpowers/plans/: 2026-05-01-codex-reviewer.md  2026-07-04-template-modernization.md
docs/superpowers/specs/: 2026-05-01-codex-reviewer-design.md  2026-07-04-template-modernization-design.md
kaggle-template/: README.md  colab_minimal.ipynb  colab_template.ipynb  setup_download_data.ipynb
kaggle-template/notebooks/eda/: 01_initial_eda.ipynb
kaggle-template/notebooks/experiments/: 02_baseline_model.ipynb
kaggle-template/notebooks/submissions/: 03_final_submission.ipynb
kaggle-template/scripts/: fetch_discussions.py
kaggle_utils/: reporting.py
src/mytools/: __init__.py  data_utils.py  ml_utils.py
tests/: test_data_utils.py  test_kaggle_reporting.py  test_ml_utils.py  test_reporting.py
