[project]
name = "mytools-python"
version = "0.1.0"
description = "Python development template with uv"
authors = [{name = "matsukumajun", email = "matsukumajun@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "optuna>=3.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "jupyterlab>=4.0.0",
    "nbformat>=5.9.0",
]
kaggle = [
    "pytorch-tabnet>=4.0.0",
    "shap>=0.42.0",
    "polars>=0.20.0",
    "wandb>=0.16.0",
    "mlflow>=2.8.0",
    "hyperopt>=0.2.7",
    "bayesian-optimization>=1.4.0",
    "feature-engine>=1.6.0",
    "imbalanced-learn>=0.11.0",
    "category-encoders>=2.6.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N806", "N803"]  # Allow uppercase variable names (common in ML)

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]